--- a/web/signup.html
+++ b/web/signup.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="txt_field">
-            <input type="mail" id="inputMail" placeholder="E-mail">
+            <input type="text" id="inputMail" placeholder="E-mail">
             <span></span>
         </div>
 
